more developer info

--- a/app/views/about/show.haml
+++ b/app/views/about/show.haml
@@ -11,7 +11,9 @@
 %p Soundwalks takes listening to another level with a complete social network that allows you to share, discuss, and describe recordings. Our uploading and recording tools make it easy for you to share your recorded experiences with your friends and the rest of the world. Additionally, you can record your explorations on the web as "virtual soundwalks," composing your own sonic tours for others to hear.
 
 %h1{:style => 'text-align: left'} More Information
-%h2{:style => 'text-align: left'} Technology
+%h2{:style => 'text-align: left'} Information for Developers
+%p Interested in using data from Soundwalks for your own projects? Great! Nearly the entire site is opened up in an easy-to-use REST API using XML or JSON. You can read more about Soundwalks API in our <a href="/about/developers">developer information section</a>.
+
 %p Soundwalks uses the <a href="http://github.com/plant/sirens-ruby">sirens-ruby</a> library for segmentation, indexing, and retrieval of environmental sounds. Additionally, <a href="http://wordnet.princeton.edu">WordNet</a> allows the site to make use of semantic relationships between  sound descriptions. The site is built using the <a href="http://rubyonrails.com">Ruby on Rails</a> framework and is <a href="http://github.com/plant/soundwalks.org">open source</a>.
 
 %h2{:style => 'text-align: left'} Acknowledgements
