--- a/public/stylesheets/sass/_main.sass
+++ b/public/stylesheets/sass/_main.sass
@@ -83,3 +83,12 @@ p.label
 p.detail
 	height: 2em
 	margin: 0
+	
+.code
+	+rounded_border
+	margin-left: 1em
+	margin-right: 1em
+	padding: 0.5em
+	background-color = !very_light_blue
+	font-family = !fonts_monospaced
+	font-size: 0.8em
