--- a/public/stylesheets/sass/_variables.sass
+++ b/public/stylesheets/sass/_variables.sass
@@ -21,6 +21,7 @@
 // Fonts.
 !fonts_normal = "Lucida Sans Unicode", "Lucida Grande", "Verdana", "Arial", "Helvetica", "sans-serif"
 !fonts_styled = "Lucida Sans", "Lucida Sans Unicode", "Lucida Grande", "Verdana", "Arial", "Helvetica", "sans-serif"
+!fonts_monospaced = "Andale Mono", "Courier"
 
 // Borders.
 !dashed_border = "1px dashed #a3bfbf"
