--- a/app/views/layouts/site.haml
+++ b/app/views/layouts/site.haml
@@ -22,7 +22,7 @@
 				%a{:title => 'Soundwalks', :href => '/'}
 					%img{:src => '/images/soundwalks.png', :alt => 'Soundwalks'}
 			%div#user-panel
-				- if logged_in? && current_user.id && !current_user.nil?
+				- if logged_in? && !current_user.nil? && current_user.id
 					%img{:src => avatar_url_for(current_user, :size => 25), :alt => ''}
 					Hi, #{first_name current_user, :force_third_person => true}! &nbsp;&nbsp;
 					%a{:title => 'Settings', :href => '/settings'} Settings
@@ -34,7 +34,7 @@
 					%a{:title => 'Sign up', :href => '/signup'} Sign up
 		%div#body
 			%div#menu
-				- if logged_in? && current_user.id && !current_user.nil?
+				- if logged_in? && !current_user.nil? && current_user.id
 					- if current_user.can_upload?
 						#{link_to 'New soundwalk', new_soundwalk_path} &#124;
 						
