--- a/app/views/about/developers.haml
+++ b/app/views/about/developers.haml
@@ -1,7 +1,7 @@
 %h1 Developer Information
 %h2 API
 %p You can get information from Soundwalks in one of two ways: 1) through <em>XML</em> or 2) through <em>JSON</em>. Both formats offer the same information.
-%p We are currently working on pulling together detailed documentation for Soundwalk's API, but the best way to learn about it now is to simply append ".xml" or ".js" to any URL for users, soundwalks, and sounds. 
+%p We are currently working on pulling together detailed documentation for Soundwalk's API, but the best way to learn about it now is to simply append ".xml" or ".json" to any URL for users, soundwalks, and sounds. 
 
 %h2 Basic objects
 %p The following URL templates may be of interest to you:
@@ -17,7 +17,7 @@
 %p Soundwalks works by performing probabilistic queries over sounds, locations, and tags. For example, given a query sound, you can obtain a distribution over a set of other sounds, tags, or locations in the network to see which are most similar. Currently, this interface is only available for sound queries on sounds and tags. The format is as follows:
 %p.code http://soundwalks.org/soundwalks/[soundwalk_id]/sounds/[sound_id]/query_set.{xml,js}?tag_ids=[tag_ids]&tag_names[tag_names]&sound_ids[sound_ids]
 %p The parameters <em>tag_ids</em>, <em>tag_names</em>, and <em>sound_ids</em> can appear in any combination in your query. For example,
-%p.code http://soundwalks.org/soundwalks/1/sounds/1/query_set.js?sound_ids=3,4,5
+%p.code http://soundwalks.org/soundwalks/1/sounds/1/query_set.json?sound_ids=3,4,5
 %p might produce the results
 %p.code 
 	[ <br />
@@ -29,7 +29,7 @@
 
 %h2 Location queries
 %p You can also search for sounds based on location rather than having to know to which soundwalk they belong. In this case, you simply need to specify the latitude and longitude coordinates and a radius (in miles) within which you wish to return results. The format is as follows:
-%p.code http://soundwalks.org/sounds.{xml,js}?lat=[latitude]&lng=[longitude]&distance=[miles]
+%p.code http://soundwalks.org/sounds.{xml,json}?lat=[latitude]&lng=[longitude]&distance=[miles]
 
 %h2 Coming soon
 In addition to better documentation, several features are on their way, including ranked retrieval lists without needing to specify target sets (as in query_set) and text-based search for users, sounds, and tags. 
