--- a/app/views/sounds/allindex.haml
+++ b/app/views/sounds/allindex.haml
@@ -1,5 +1,5 @@
 - content_for :javascript do
-	= javascript_include_tag 'lib/jquery', 'lib/jquery-ui', 'editable', 'form-buttons', 'soundwalks'
+	= javascript_include_tag 'lib/jquery', 'lib/jquery-ui', 'editable', 'soundwalks'
 	
 %h1 Sound Administration
 
