--- a/app/views/users/edit.haml
+++ b/app/views/users/edit.haml
@@ -8,11 +8,11 @@
 		%p
 			We use #{link_to 'Gravatar', 'http://gravatar.com'} for all user profile pictures. To get your own avatar, |
 			sign up with Gravatar using the email address associated with your Soundwalks account. It may take several |
-			minutes for your changes to have effect.
+			minutes for your changes to take effect.
 			
 		%h2 Editing your password
 		%p 
-			Use this page to edit your profile information. If you do not wish to change your password, just leave |
+			Use this page to edit your profile information. If you don't want to change your password, just leave |
 			&quot;New Password&quot; blank. Otherwise, make sure that &quot;Old Password&quot; matches your existing |
 			password.
 			
