--- a/app/views/about/show.haml
+++ b/app/views/about/show.haml
@@ -20,8 +20,8 @@
 %p Soundwalks is a research project within the <a href="http://ame.asu.edu/">School of Arts, Media and Engineering</a> at <a href="http://asu.edu/">Arizona State University</a>. For more information, the following papers may be of interest:
 
 %ol
-	%li Gordon Wichern, H. Thornburg, B. Mechtley, A. Fink, A Spanias, and K. Tu, "Robust multi-feature segmentation and indexing for natural sound environments," in <i>Proc. of IEEE/EURASIP International Workshop on Content Based Multimedia Indexing (CBMI)</i>, Bordeaux France, July 2007. (<a href="http://www.public.asu.edu/~gwichern/CBMI07.pdf">PDF</a>)
-	%li Gordon Wichern, J. Xue, H. Thornburg, and A. Spanias, "Distortion-aware query-by-example of environmental sounds," in <i>Proc. of IEEE Workshop on Applications of Signal Processing to Audio and Acoustics (WASPAA)</i>, New Paltz, NY, October 2007. (<a href="http://www.public.asu.edu/~gwichern/WASPAA07.pdf">PDF</a>).
+	%li G. Wichern, H. Thornburg, B. Mechtley, A. Fink, A Spanias, and K. Tu, "Robust multi-feature segmentation and indexing for natural sound environments," in <i>Proc. of IEEE/EURASIP International Workshop on Content Based Multimedia Indexing (CBMI)</i>, Bordeaux France, July 2007. (<a href="http://www.public.asu.edu/~gwichern/CBMI07.pdf">PDF</a>)
+	%li G. Wichern, J. Xue, H. Thornburg, and A. Spanias, "Distortion-aware query-by-example of environmental sounds," in <i>Proc. of IEEE Workshop on Applications of Signal Processing to Audio and Acoustics (WASPAA)</i>, New Paltz, NY, October 2007. (<a href="http://www.public.asu.edu/~gwichern/WASPAA07.pdf">PDF</a>).
 	%li J. Xue, Gordon Wichern, H. Thornburg, and A. Spanias, "Fast query-by-example of environmental sounds via robust and efficient cluster-based indexing," in <i>Proc. of IEEE International Conference on Acoustics Speech and Signal Processing (ICASSP)</i>, Las Vegas, NV, April 2008. (<a href="http://www.public.asu.edu/~gwichern/cluster_ICASSP08.pdf">PDF</a>).
 
 %p Additionally, work on Soundwalks is supported by the <a href="http://nsf.gov">National Science Foundation</a> under Grants NSF IGERT DGE-05-04647 and NSF CISE Research Infrastructure 04-03428.
