lightened up the links a bit

--- a/public/stylesheets/sass/_variables.sass
+++ b/public/stylesheets/sass/_variables.sass
@@ -8,8 +8,9 @@
 !light_green = !green + #226622
 !very_light_green = !green / 2 + #99ffbc
 
-!dark_blue = #223241
-!blue = !dark_blue / 2 + #999999
+!dark_blue = #2f535b
+!temp_dark_blue = #223241
+!blue = !temp_dark_blue / 2 + #999999
 !light_blue = #a3bfbf
 !very_light_blue = !light_blue / 2 + #999999
 
