--- a/app/views/layouts/user.haml
+++ b/app/views/layouts/user.haml
@@ -19,7 +19,7 @@
 		
 	%body
 		%div#strip{:class => 'little'}
-			%img{:src => '/images/soundwalks-big.png', :alt => 'Soundwalks'}
+			%img{:src => '/images/soundwalks.png', :alt => 'Soundwalks'}
 			
 		%div#body{:class => 'little'}
 			%div#content
