--- a/public/stylesheets/sass/_buttons.sass
+++ b/public/stylesheets/sass/_buttons.sass
@@ -5,6 +5,7 @@
 .buttons a, button
 	display: inline
 	margin: 0 7px 0 0
+	color = !blue
 	background-color: #f5f5f5
 	border: 1px solid #dedede
 	border-top: 1px solid #eee
@@ -33,7 +34,6 @@ button img, .buttons a img
 	border: none
 
 button:hover, .buttons a:hover, .button-hover, .buttons a.button-hover
-	background-color: #dff4ff
 	background-color = !very_light_green
 	border = "1px solid " + !light_green
-	color = !red
+	color = !dark_green
