--- a/public/stylesheets/sass/_forms.sass
+++ b/public/stylesheets/sass/_forms.sass
@@ -192,12 +192,12 @@ div.editable,p.editable,td.editable,span.editable,div.editable p,p.editable p,td
 	color = !dark_blue
 	
 	&:hover
-		background-color = !very_light_blue
-		color = !red
+		background-color = !tan
+		color = !dark_green
 		
 h1.editable
-	color = !red
+	color = !dark_blue
 	
 	&:hover
-		background-color = !very_light_blue
-		color = !dark_blue
+		background-color = !tan
+		color = !dark_green
