--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -3,7 +3,7 @@
 	
 - content_for :javascript do
 	= javascript_include_tag 'lib/jquery'
-	
+
 - if logged_in?
 	= render :partial => 'users/user_profile', :locals => {:user => current_user}
 	
@@ -16,4 +16,5 @@
 		%p None of the people you are following have posted any soundwalks.
 	- else
 		%p You are not following anyone.
-		
+- else
+	%p{:class => 'invitation rounded'} Hey there! Are you new to Soundwalks? We're a community dedicated to exploring the world's rich sonic landscape. With Soundwalks, you can share your acoustic experiences and explore new soundscapes with our interactive sound map. <a href="/about">Read more about us</a> and <a href="/signup">join today!</a>
