--- a/public/stylesheets/sass/_streams.sass
+++ b/public/stylesheets/sass/_streams.sass
@@ -9,14 +9,15 @@
 	border-spacing: 0
 	
 	li
-		display: table-row
+		border: none
 		list-style: none
 		margin: 0
-		padding: 0
+		padding: 0.5em
 		cursor: pointer
 		
 		&:hover
-			background-color = !very_light_blue
+			background-color = !tan
+			
 			
 div
 	&.stream-item-avatar
@@ -30,12 +31,13 @@ div
 		vertical-align: top
 		
 	&.stream-item-content
+		border-left = "5px solid " + !blue
+		padding-left: 0.5em
 		vertical-align: top
 		padding-top: 0.5em
 		padding-bottom: 0.5em
 		overflow: hidden
 		z-order: 2
-		border-bottom = !dashed_border
 	
 	&.stream-item-meta
 		+float_right
@@ -54,7 +56,7 @@ div
 		z-order: 1
 		
 span.stream-item-delete-button
-	color = !red
+	color = !blue
 		
 span
 	&.stream-item-title
