--- a/public/stylesheets/sass/_variables.sass
+++ b/public/stylesheets/sass/_variables.sass
@@ -3,18 +3,18 @@
 !light_red = !red / 2 + #999999
 !very_light_red = !light_red / 2 + #FF8888
 
-!green = #9dbf30
+!green = #91B73E
 !dark_green = !green / 1.5
 !light_green = !green + #226622
 !very_light_green = !green / 2 + #99ffbc
 
-!dark_blue = #2f535b
-!temp_dark_blue = #223241
-!blue = !temp_dark_blue / 2 + #999999
-!light_blue = #a3bfbf
-!very_light_blue = !light_blue / 2 + #999999
+!blue = #3C8BBC
+!dark_blue = !blue / 1.5
+!light_blue = !blue / 2.5 + #BABABA
 
 !tan = #efebe6
+!dark_tan = !tan / 2 + #221100 - #000011
+
 !gray = #888888
 !light_gray = #efefef
 !dark_gray = !gray / 2
