--- a/app/views/about/show.haml
+++ b/app/views/about/show.haml
@@ -8,7 +8,7 @@
 %p Soundwalks is a unique community for exploring the world's soundscape. Soundwalks leverages user-submitted field recordings, or "soundwalks," and novel audio processing techniques to let you hear any point on the globe as if you were really there. 
 
 %h1{:style => 'text-align: left'} Social Experiences
-%p Soundwalks takes listening to another level with a complete social network that allows you to share, discuss, and describe recordings. Our uploading and recording tools make it easy for you to share your recorded experiences with your friends and the rest of the world. Additionally, you can record your explorations on the web as "virtual soundwalks," composing your own sonic tours for others to hear.
+%p Soundwalks takes listening to another level with a complete social network that allows you to share, discuss, and describe recordings. Our uploading and recording tools make it easy for you to share your recorded experiences with your friends and the rest of the world. You can also record your explorations on the web as "virtual soundwalks," composing your own sonic tours for others to hear.
 
 %h1{:style => 'text-align: left'} More Information
 %h2{:style => 'text-align: left'} Information for Developers
@@ -24,7 +24,7 @@
 	%li G. Wichern, J. Xue, H. Thornburg, and A. Spanias, "Distortion-aware query-by-example of environmental sounds," in <i>Proc. of IEEE Workshop on Applications of Signal Processing to Audio and Acoustics (WASPAA)</i>, New Paltz, NY, October 2007. (<a href="http://www.public.asu.edu/~gwichern/WASPAA07.pdf">PDF</a>).
 	%li J. Xue, Gordon Wichern, H. Thornburg, and A. Spanias, "Fast query-by-example of environmental sounds via robust and efficient cluster-based indexing," in <i>Proc. of IEEE International Conference on Acoustics Speech and Signal Processing (ICASSP)</i>, Las Vegas, NV, April 2008. (<a href="http://www.public.asu.edu/~gwichern/cluster_ICASSP08.pdf">PDF</a>).
 
-%p Additionally, work on Soundwalks is supported by the <a href="http://nsf.gov">National Science Foundation</a> under Grants NSF IGERT DGE-05-04647 and NSF CISE Research Infrastructure 04-03428.
+%p Work on Soundwalks is supported by the <a href="http://nsf.gov">National Science Foundation</a> under Grants NSF IGERT DGE-05-04647 and NSF CISE Research Infrastructure 04-03428.
 
 %h2{:style => 'text-align: left'} Copyright
-%p Soundwalks is Copyright 2009 Arizona State University, licensed under the GNU GPL. Additionally, we make use of several open source libraries and Rails plugins. See our <a href="http://github.com/plant/soundwalks.org">source code</a> page for more details.
+%p Soundwalks is Copyright 2009 Arizona State University, licensed under the GNU GPL. We also make use of several open source libraries and Rails plugins. See our <a href="http://github.com/plant/soundwalks.org">source code</a> page for more details.
