better friends list colors

--- a/public/stylesheets/sass/_users.sass
+++ b/public/stylesheets/sass/_users.sass
@@ -56,6 +56,12 @@
 			height: 92px
 			
 		.name
+			a
+				color = !blue
+				
+				&:hover
+					color = !dark_green
+					
 		.following
 		.followers
 		.soundwalks
