--- a/public/stylesheets/sass/_variables.sass
+++ b/public/stylesheets/sass/_variables.sass
@@ -10,7 +10,7 @@
 
 !blue = #3C8BBC
 !dark_blue = !blue / 1.5
-!light_blue = !blue / 2.5 + #BABABA
+!light_blue = !blue / 5 + #D0D0D0
 
 !tan = #efebe6
 !dark_tan = !tan / 2 + #221100 - #000011
