--- a/public/stylesheets/sass/_main.sass
+++ b/public/stylesheets/sass/_main.sass
@@ -54,6 +54,14 @@ h2
 	color = !dark_blue
 	text-align: center
 	
+h3
+	font-weight: normal
+	border-bottom = !dashed_border
+	text-align: center
+	font-size: 1em
+	padding-bottom: 0.5em
+	margin-top: 0.5em
+	
 p
 	margin-top: 0.5em
 	line-height: 1.5em
