styling the flash map

--- a/public/stylesheets/sass/_maps.sass
+++ b/public/stylesheets/sass/_maps.sass
@@ -26,6 +26,10 @@
 	margin: 0.5
 	overflow: hidden
 	background-color: white
+
+#flash-map
+	border = !thick_border
+	background-color: white
 	
 .marker-info
 	margin: 0
