--- a/app/views/map/show.haml
+++ b/app/views/map/show.haml
@@ -1,7 +1,7 @@
 - content_for :title do
 	Sound Map
 
-%object{:codebase => "http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0", :height => "600px", :width => "100%", :align => "middle", :classid => "clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"}
+%object#flashmap{:codebase => "http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0", :height => "600px", :width => "100%", :align => "middle", :classid => "clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"}
 	%param{:name => "flashvars", :value => "google_key=#{Geokit::Geocoders::google}"}
 	%param{:name => "src", :value => "/flash/map.swf"}
 	%param{:name => "movie", :value => "/flash/map.swf"}
