no more calculations for colors

--- a/public/stylesheets/sass/_uploadify.sass
+++ b/public/stylesheets/sass/_uploadify.sass
@@ -108,10 +108,10 @@ form
 	+queue_item
 	
 .fileUploadQueueItem-Canceled
-	background-color = !light_red
+	background-color = !very_light_red
 	+queue_item
 	
 	.progress
 		.bar
-			background-color = !light_red
+			background-color = !very_light_red
 			
