--- a/public/stylesheets/sass/_variables.sass
+++ b/public/stylesheets/sass/_variables.sass
@@ -1,24 +1,23 @@
 // Colors.
 !red = #bf3030
-!light_red = !red / 2 + #999999
-!very_light_red = !light_red / 2 + #FF8888
+!very_light_red = #FFE0E0
 
 !green = #91B73E
-!dark_green = !green / 1.5
-!light_green = !green + #226622
-!very_light_green = !green / 2 + #99ffbc
+!dark_green = #607A29
+!light_green = #B3FF60
+!very_light_green = #E1FFDB
 
 !blue = #3C8BBC
-!dark_blue = !blue / 1.5
-!light_blue = !blue / 5 + #D0D0D0
+!dark_blue = #285C7D
+!light_blue = #A3BFBF
 
-!tan = #efebe6
-!dark_tan = !tan / 2 + #221100 - #000011
+!tan = #EFEBE6
+!dark_tan = #998662
 
 !gray = #888888
-!light_gray = #efefef
-!dark_gray = !gray / 2
-!very_light_gray = #f8f8f8
+!light_gray = #EFEFEF
+!dark_gray = #444444
+!very_light_gray = #F8F8F8
 
 // Fonts.
 !fonts_normal = "Lucida Sans Unicode", "Lucida Grande", "Verdana", "Arial", "Helvetica", "sans-serif"
