made beta notice stand out a little more

--- a/app/views/about/show.haml
+++ b/app/views/about/show.haml
@@ -1,8 +1,9 @@
 - content_for :title do
 	About Soundwalks
 
-%h1{:style => 'text-align: left'} Coming Soon
-%p Soundwalks is still in early beta stages and is missing several key features. Check back regularly for updates, and if you're interested in our roadmap, read on!
+%div.invitation
+	%h1 Coming Soon
+	%p Soundwalks is still in early beta stages and is missing several key features. Check back regularly for updates. If you're interested in our roadmap, read on!
 
 %h1{:style => 'text-align: left'} The World Soundscape
 %p Soundwalks is a unique community for exploring the world's soundscape. Soundwalks leverages user-submitted field recordings, or "soundwalks," and novel audio processing techniques to let you hear any point on the globe as if you were really there. 
