simplified border rounding

--- a/app/views/about/developers.haml
+++ b/app/views/about/developers.haml
@@ -1,3 +1,6 @@
+- content_for :title do
+	Developer Information
+	
 %h1 Developer Information
 %h2 API
 %p You can get information from Soundwalks in one of two ways: 1) through <em>XML</em> or 2) through <em>JSON</em>. Both formats offer the same information.
