--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -20,4 +20,4 @@
 	- else
 		%p You are not following anyone.
 - else
-	%p{:class => 'invitation rounded'} Hey there! Are you new to Soundwalks? We're a community dedicated to exploring the world's rich sonic landscape. With Soundwalks, you can share your acoustic experiences and explore new soundscapes with our interactive sound map. <a href="/about">Read more about us</a> and <a href="/signup">join today!</a>
+	%p{:class => 'invitation'} Hey there! Are you new to Soundwalks? We're a community dedicated to exploring the world's rich sonic landscape. With Soundwalks, you can share your acoustic experiences and explore new soundscapes with our interactive sound map. <a href="/about">Read more about us</a> and <a href="/signup">join today!</a>
