--- a/public/stylesheets/sass/_main.sass
+++ b/public/stylesheets/sass/_main.sass
@@ -71,6 +71,7 @@ em
 	border-bottom = "3px solid " + !green
 	
 p.notice
+	+rounded_border
 	border: none
 	width: 100%
 	padding: 0.5em
@@ -79,6 +80,7 @@ p.notice
 	color = !dark_green
 	
 p.error
+	+rounded_border
 	border: none
 	width: 100%
 	padding: 0.5em
@@ -107,6 +109,6 @@ p.detail
 	margin-right: 1em
 	padding: 0.5em
 	font-family = !fonts_monospaced
-	background-color = !light_blue
+	background-color = !light_gray
 	font-size: 0.8em
 	
