--- a/app/views/home/tagcloud.haml
+++ b/app/views/home/tagcloud.haml
@@ -1,5 +1,8 @@
 - content_for :title do
 	Popular Tags
 
-%h1 Popular Tags
+%div.invitation
+	%h1 Popular Tags
+	%p Here is a list of the most popular tags on Soundwalks. Check back soon for additional features such as searching for sounds based on tag queries.
+	
 %p{:style => 'text-align: center'}= formatted_tag_cloud(200)
