--- a/app/views/layouts/site.haml
+++ b/app/views/layouts/site.haml
@@ -39,6 +39,7 @@
 				
 				#{link_to 'Map', '/map'}
 				#{link_to 'Timeline', '/'}
+				#{link_to 'Tags', '/tagcloud'}
 				= link_to 'About', about_path
 		%div#body
 			%div#content
