--- a/app/views/home/tagcloud.haml
+++ b/app/views/home/tagcloud.haml
@@ -3,6 +3,6 @@
 
 %div.invitation
 	%h1 Popular Tags
-	%p Here is a list of the most popular tags on Soundwalks. Tags are colored according to similar meaning and acoustic qualities. Check back soon for additional features such as searching for sounds based on tag queries.
+	%p Here is a list of the most popular tags on Soundwalks. Tags are colored according to similar meaning and acoustic quality. Check back soon for additional features such as searching for sounds based on tag queries.
 	
 %p{:style => 'text-align: center'}= formatted_tag_cloud(200)
