--- a/app/views/map/show.haml
+++ b/app/views/map/show.haml
@@ -1,6 +1,9 @@
 - content_for :title do
 	Sound Map
-
+	
+- if !logged_in?
+	%p{:class => 'invitation'} Hey there! Are you new to Soundwalks? We're a community dedicated to exploring the world's rich sonic landscape. With Soundwalks, you can share your acoustic experiences and explore new soundscapes with our interactive sound map. <a href="/about">Read more about us</a> and <a href="/signup">join today!</a>
+	
 %div#flash-map
 	%object{:codebase => "http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0", :height => "600px", :width => "100%", :align => "middle", :classid => "clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"}
 		%param{:name => "flashvars", :value => "google_key=#{Geokit::Geocoders::google}"}
