timeline works when not logged in now

--- a/app/views/layouts/site.haml
+++ b/app/views/layouts/site.haml
@@ -38,7 +38,12 @@
 						#{link_to 'New soundwalk', new_soundwalk_path}
 				
 				#{link_to 'Map', '/map'}
-				#{link_to 'Timeline', '/'}
+				
+				-if logged_in?
+					#{link_to 'Timeline', '/'}
+				- else
+					#{link_to 'Timeline', '/soundwalks'}
+					
 				#{link_to 'Tags', '/tagcloud'}
 				= link_to 'About', about_path
 		%div#body
