--- a/app/views/map/show.haml
+++ b/app/views/map/show.haml
@@ -1,7 +1,7 @@
 - content_for :title do
 	Sound Map
 	
-- if !logged_in?
+- if !logged_in? and !flash[:notice]
 	%p{:class => 'invitation'} Hey there! Are you new to Soundwalks? We're a community dedicated to exploring the world's rich sonic landscape. With Soundwalks, you can share your acoustic experiences and explore new soundscapes with our interactive sound map. <a href="/about">Read more about us</a> and <a href="/signup">join today!</a>
 	
 %div#flash-map
